--- a/hello-world/src/App.css
+++ b/hello-world/src/App.css
@@ -28,5 +28,15 @@
 }
 
 html {
-  background-color: #222;
+  background-color: antiquewhite;
+}
+
+.profile_pic {
+
+  border-radius: 100%;
+  height: auto;
+  width: auto;
+  max-width: 100px;
+  max-height: 100px;
+
 }
